--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,14 +3,17 @@
 
     <item
             android:id="@+id/navigation_home"
+            android:title="@string/cards"
             android:icon="@drawable/ic_content_copy_black_24dp"/>
 
     <item
             android:id="@+id/navigation_dashboard"
+            android:title="@string/open_deck"
             android:icon="@drawable/ic_email_black_24dp"/>
 
     <item
             android:id="@+id/navigation_notifications"
+            android:title="@string/fight"
             android:icon="@drawable/ic_war_black_24dp"/>
 
 </menu>
