--- a/app/src/main/res/layout/fragment_envelope.xml
+++ b/app/src/main/res/layout/fragment_envelope.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#C0C0C0"
+             tools:context=".ui.envelope.EnvelopeFragment">
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:text="@string/title_envelope"
-            android:gravity="center_vertical|center_horizontal"/>
+    />
 
-</LinearLayout>
+</FrameLayout>
