--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -10,7 +10,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".ui.login.LoginActivity">
+        tools:context=".ui.registration.RegistrationActivity">
 
     <ImageView
             android:layout_width="128dp"
@@ -22,13 +22,13 @@
             app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView3"/>
 
     <EditText
-            android:id="@+id/username"
+            android:id="@+id/nickname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="305dp"
             android:layout_marginEnd="24dp"
-            android:hint="@string/prompt_username"
+            android:hint="@string/prompt_nickname"
             android:inputType="textEmailAddress"
             android:selectAllOnFocus="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
     <Button
-            android:id="@+id/login"
+            android:id="@+id/registration"
             android:enabled="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -44,7 +44,7 @@
             android:layout_marginTop="400dp"
             android:layout_marginStart="48dp"
             android:layout_marginEnd="48dp"
-            android:text="@string/action_sign_in"
+            android:text="@string/action_create_user"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
