--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -7,6 +7,7 @@
              tools:context=".ui.fight.FightFragment">
 
     <TextView
+            android:id="@+id/fightText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
