--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -29,4 +29,11 @@
             android:stretchMode="spacingWidthUniform"
     />
 
+    <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:id="@+id/cards_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"/>
+
 </FrameLayout>
