--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <fragment
+    <FrameLayout
+            android:layout_weight="1"
             android:id="@+id/fragment_container"
             android:name="ar.edu.utn.frba.mobile.a2019c1.superheroes.ui.cards.CardsFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="546dp"
     />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_weight="4"
             android:id="@+id/nav_view"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
             android:layout_marginStart="0dp"
@@ -27,4 +30,4 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
