--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,63 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        tools:context=".ui.registration.RegistrationActivity"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context=".ui.registration.RegistrationActivity">
+        android:background="@drawable/bg_registration">
 
     <ImageView
-            android:layout_width="128dp"
-            android:layout_height="128dp"
-            android:src="@mipmap/ic_launcher_round"
-            android:layout_marginTop="105dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:id="@+id/imageView3"/>
+            android:id="@+id/iv_logo_registration"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="140dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ic_registration"/>
 
     <EditText
-            android:id="@+id/nickname"
-            android:layout_width="0dp"
+            android:id="@+id/et_nickname"
+            android:theme="@style/EditText"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="305dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_below="@+id/iv_logo_registration"
             android:hint="@string/prompt_nickname"
-            android:inputType="textEmailAddress"
+            android:inputType="textPersonName"
             android:selectAllOnFocus="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:textAlignment="center"
+            android:textColorHighlight="#ACACAC"
+            android:textColorHint="#666363"
+            android:textColor="#7f0000"
+            android:textSize="24sp"/>
 
     <Button
-            android:id="@+id/registration"
-            android:enabled="false"
+            android:id="@+id/b_registration"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/et_nickname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginTop="400dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="48dp"
-            android:text="@string/action_create_user"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"/>
+            android:enabled="false"
+            android:text="@string/action_create_user"/>
+
     <ProgressBar
+            android:id="@+id/registration_spinner"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/registration_spinner" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.499"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/b_registration"
             android:visibility="invisible"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
