--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -85,7 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:paddingBottom="10dp"/>
 
         <RelativeLayout
                 android:layout_width="wrap_content"
