--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -26,50 +26,11 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
             <TableLayout
+                    android:id="@+id/table_user_team"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:background="#6D4056D8">
-                <TableRow
-                        android:paddingTop="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1">
-
-                    <TextView
-                            android:layout_weight=".25"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:text="superhero 1"
-                            android:gravity="center"
-                            android:layout_marginLeft="4dp"
-                            android:layout_marginRight="4dp"
-                            android:background="#c5c5c5"/>
-                    <TextView
-                            android:layout_weight=".25"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="superhero 2"
-                            android:layout_marginRight="4dp"
-                            android:background="#c5c5c5"/>
-                    <TextView
-                            android:layout_weight=".25"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="superhero 3"
-                            android:layout_marginRight="4dp"
-                            android:background="#c5c5c5"/>
-                    <TextView
-                            android:layout_weight=".25"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:text="superhero 4"
-                            android:layout_marginRight="4dp"
-                            android:background="#c5c5c5"/>
-                </TableRow>
             </TableLayout>
         </RelativeLayout>
 
