Search opponent windows added (it still doesn't search)

--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -12,6 +12,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:text="@string/title_fight"/>
+            android:text="Shake to Fight"/>
 
 </LinearLayout>
