--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <FrameLayout
+    <androidx.viewpager.widget.ViewPager
             android:layout_weight="1"
             android:id="@+id/fragment_container"
             android:name="ar.edu.utn.frba.mobile.a2019c1.superheroes.ui.cards.CardsFragment"
@@ -18,7 +18,7 @@
     />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_weight="4"
+            android:layout_weight="1"
             android:id="@+id/nav_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
