--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -9,8 +9,10 @@
 
     <Button
             android:id="@+id/btn_get_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="161dp"
+            android:layout_height="161dp"
+            android:background="@drawable/round_button"
+            android:size
             android:text="Click Me"/>
 
     <GridView
