--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
               android:orientation="vertical"
              android:layout_width="match_parent"
@@ -12,17 +12,19 @@
             android:layout_width="161dp"
             android:layout_height="161dp"
             android:background="@drawable/round_button"
-            android:size
-            android:text="Click Me"/>
+            android:text="@string/get_card" android:textSize="30sp"
+            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
+            android:layout_marginBottom="45dp"/>
 
     <GridView
             android:id="@+id/bundle_grid_view"
             android:layout_width="match_parent"
-            android:layout_height="648dp"
+            android:layout_height="400dp"
             android:gravity="center|clip_vertical"
             android:columnWidth="100dp"
             android:verticalSpacing="24dp"
             android:horizontalSpacing="10dp"
-            android:visibility="invisible" android:translationY="80dp"/>
+            android:visibility="invisible" android:translationY="80dp" android:layout_alignParentStart="true"
+            android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_alignParentTop="true"/>
 
-</LinearLayout>
+</RelativeLayout>
