--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -13,7 +13,6 @@
             android:layout_height="161dp"
             android:background="@drawable/round_button"
             android:text="@string/get_card" android:textSize="30sp"
-            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
-            android:layout_marginBottom="45dp"/>
+            android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
 
 </RelativeLayout>
