Implements RecyclerView, click not working

--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".ui.cards.CardsFragment">
 
     <LinearLayout
@@ -53,16 +53,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="3">
-            <GridView
-                    android:id="@+id/cards_grid_view"
+            <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cards_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:columnWidth="100dp"
-                    android:numColumns="auto_fit"
-                    android:verticalSpacing="24dp"
-                    android:horizontalSpacing="10dp"
-                    android:stretchMode="spacingWidthUniform"/>
+                    android:layout_height="wrap_content"
+
+                    tools:listitem="@layout/linearlayout_card"
+                    tools:context=".ui.cards.CardsFragment"/>
         </RelativeLayout>
 
         <Button
