--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
-             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
+             android:layout_height="match_parent"
              tools:context=".ui.cards.CardsFragment">
 
     <LinearLayout
@@ -54,12 +54,12 @@
                 android:layout_height="0dp"
                 android:layout_weight="3">
             <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/cards_recycler_view"
+                    android:id="@+id/rvCards"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    tools:context=".ui.cards.CardsFragment"
+                    tools:listitem="@layout/linearlayout_card"/>
 
-                    tools:listitem="@layout/linearlayout_card"
-                    tools:context=".ui.cards.CardsFragment"/>
         </RelativeLayout>
 
         <Button
