--- a/app/src/main/res/layout/activity_show_cards.xml
+++ b/app/src/main/res/layout/activity_show_cards.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -7,16 +7,12 @@
         android:orientation="vertical"
         tools:context=".ui.bundle.ShowCards">
 
-    <GridView
-            android:id="@+id/bundle_grid_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center|clip_vertical"
-            android:columnWidth="100dp"
-            android:verticalSpacing="24dp"
-            android:horizontalSpacing="10dp"
-            android:visibility="invisible" android:translationY="80dp" android:layout_alignParentStart="true"
-            android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_alignParentTop="true"
-            tools:ignore="MissingConstraints"/>
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvBundle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            tools:context=".ui.bundle.ShowCards"
+            tools:listitem="@layout/linearlayout_card"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
