--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-              android:orientation="vertical"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="#C0C0C0"
-             tools:context=".ui.bundle.BundleFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#C0C0C0"
+                tools:context=".ui.bundle.BundleFragment">
 
     <Button
             android:id="@+id/btn_get_card"
             android:layout_width="161dp"
             android:layout_height="161dp"
             android:background="@drawable/round_button"
-            android:text="@string/get_card" android:textSize="30sp"
-            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
-            android:layout_marginBottom="45dp"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/bundle_recycler_view"
-
-            tools:listitem="@layout/linearlayout_card"
-            tools:context=".ui.bundle.BundleFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center|clip_vertical"
-            android:visibility="invisible" android:translationY="80dp" android:layout_alignParentStart="true"
-            android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_alignParentTop="true"/>
-
+            android:text="@string/get_card"
+            android:textSize="30sp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
 
 </RelativeLayout>
