--- a/app/src/main/res/layout/activity_show_cards.xml
+++ b/app/src/main/res/layout/activity_show_cards.xml
@@ -7,6 +7,13 @@
         android:orientation="vertical"
         tools:context=".ui.bundle.ShowCards">
 
+    <Button
+            android:id="@+id/btn_close_show_cards"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:background="@drawable/ic_arrow_back_black_24dp"
+    />
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvBundle"
             android:layout_width="wrap_content"
