Added Fight search and Fight victory fragments for Fight search activity

--- a/app/src/main/res/layout/fragment_fight_search.xml
+++ b/app/src/main/res/layout/fragment_fight_search.xml
@@ -4,10 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <RelativeLayout
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/fragment_fight_container"
+    <TextView
+
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:text="Searching Opponent"/>
+
 </LinearLayout>
