--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -12,7 +12,7 @@
             android:baselineAligned="false">
 
         <TextView
-                android:id="@+id/textTeam"
+                android:id="@+id/textview_myteam"
                 android:text="@string/text_team"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
             <TableLayout
-                    android:id="@+id/table_user_team"
+                    android:id="@+id/tablelayout_cards_userteam"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -35,13 +35,13 @@
         </RelativeLayout>
 
         <View
-                android:id="@+id/divider"
+                android:id="@+id/divider_cards"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
                 android:background="?android:attr/listDivider"/>
 
         <TextView
-                android:id="@+id/textOthers"
+                android:id="@+id/textview_cards_othercards"
                 android:text="@string/text_others"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="3">
             <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rvCards"
+                    android:id="@+id/recyclerview_cards_available"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:context=".ui.cards.CardsFragment"
@@ -63,7 +63,7 @@
         </RelativeLayout>
 
         <Button
-                android:id="@+id/btn_create_team"
+                android:id="@+id/btn_cards_createteam"
                 android:width="170dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,7 +76,7 @@
 
     <ProgressBar
             style="?android:attr/progressBarStyle"
-            android:id="@+id/cards_spinner"
+            android:id="@+id/progressbar_cards_spinner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
