--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -52,14 +52,14 @@
         <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="3">
+                android:layout_weight="3"
+                android:layout_marginBottom="10dp">
             <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerview_cards_available"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     tools:context=".ui.cards.CardsFragment"
                     tools:listitem="@layout/linearlayout_card"/>
-
         </RelativeLayout>
 
         <Button
