--- a/app/src/main/res/layout/linearlayout_card.xml
+++ b/app/src/main/res/layout/linearlayout_card.xml
@@ -1,38 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/linearlayout_card"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:gravity="center">
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardUseCompatPadding="true">
 
-    <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+    <LinearLayout
+            android:id="@+id/linearlayout_card"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="8dp">
 
         <ImageView
                 android:id="@+id/imageview_card"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerCrop"/>
-    </FrameLayout>
 
-    <TextView
-            android:id="@+id/textview_card_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:paddingTop="4dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:gravity="center_horizontal"/>
+        <TextView
+                android:id="@+id/textview_card_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:paddingTop="4dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:gravity="center_horizontal"/>
 
-    <TextView
-            android:id="@+id/textview_card_power"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:gravity="center_horizontal"/>
+        <TextView
+                android:id="@+id/textview_card_power"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12sp"
+                android:gravity="center_horizontal"/>
 
-</LinearLayout>
+    </LinearLayout>
+
+    <View
+            android:id="@+id/view_card_selectedoverlay"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#803F51B5"
+            android:visibility="invisible"/>
+
+</androidx.cardview.widget.CardView>
