Search opponent - not working

--- a/app/src/main/res/layout/fragment_fight.xml
+++ b/app/src/main/res/layout/fragment_fight.xml
@@ -7,6 +7,10 @@
              android:background="#3a6d99"
              tools:context=".ui.fight.FightFragment">
 
+    <Button
+            android:text="Pelear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:id="@+id/button_fight"/>
     <TextView
             android:id="@+id/fightText"
             android:layout_width="match_parent"
