--- a/app/src/main/res/layout/fragment_fight_search.xml
+++ b/app/src/main/res/layout/fragment_fight_search.xml
@@ -4,11 +4,17 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+    <pl.droidsonroids.gif.GifImageView
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:src="@drawable/loading"
+            android:id="@+id/loading_figth_icon"/>
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
             android:layout_gravity="center"
-            android:text="Searching Opponent"/>
+            android:text="Buscando oponente"/>
 
 </LinearLayout>
