--- a/app/src/main/res/layout/activity_fight_result.xml
+++ b/app/src/main/res/layout/activity_fight_result.xml
@@ -11,6 +11,7 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
+            android:visibility="invisible"
             android:background="@drawable/ic_arrow_back_black_24dp"
     />
 
