--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".ui.bundle.BundleFragment">
 
-    <Button
+    <TextView
+            android:text="@string/text_open_bundle"
+            android:id="@+id/txt_bundle"
+            android:layout_width="match_parent"
+            android:layout_height="39dp" android:layout_above="@+id/btn_get_card"
+
+            android:layout_marginBottom="18dp" android:textAlignment="center" android:textSize="18sp"
+            android:padding="5dp"/>
+    <ImageButton
             android:id="@+id/btn_get_card"
-            android:layout_width="161dp"
-            android:layout_height="161dp"
+            android:src="@drawable/sobre"
+            android:adjustViewBounds="true"
+
+            android:layout_width="292dp"
+            android:layout_height="429dp"
             android:background="@drawable/ic_email_black_24dp"
             android:textSize="30sp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerInParent="true"
+            android:scaleType="fitCenter"/>
+
 
 </RelativeLayout>
