--- a/app/src/main/res/layout/activity_show_cards.xml
+++ b/app/src/main/res/layout/activity_show_cards.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.bundle.ShowCards">
+        tools:context=".ui.bundle.ShowCards" android:background="#7C2D82">
 
     <Button
             android:id="@+id/btn_close_show_cards"
