--- a/app/src/main/res/layout/fragment_bundle.xml
+++ b/app/src/main/res/layout/fragment_bundle.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:context=".ui.bundle.BundleFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              tools:context=".ui.bundle.BundleFragment" android:background="#641C6C">
 
-    <TextView
-            android:text="@string/text_open_bundle"
-            android:id="@+id/txt_bundle"
-            android:layout_width="match_parent"
-            android:layout_height="39dp" android:layout_above="@+id/btn_get_card"
-
-            android:layout_marginBottom="18dp" android:textAlignment="center" android:textSize="18sp"
-            android:padding="5dp"/>
     <ImageButton
             android:id="@+id/btn_get_card"
             android:src="@drawable/sobre"
             android:adjustViewBounds="true"
-
-            android:layout_width="292dp"
-            android:layout_height="429dp"
-            android:background="@drawable/ic_email_black_24dp"
+            android:contentDescription="@string/title_bundle"
+            android:layout_width="match_parent"
+            android:layout_height="437dp"
             android:textSize="30sp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitCenter"
+            android:padding="20dp" android:background="#7C2D82"/>
+    <TextView
+            android:text="@string/text_open_bundle"
+            android:id="@+id/txt_bundle"
+            android:layout_width="match_parent"
+            android:layout_height="39dp"
+
+            android:textAlignment="center" android:textSize="24sp"
+            android:padding="5dp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="#FFFFFF" android:textStyle="bold" android:layout_marginTop="30dp"
+    />
 
 
-</RelativeLayout>
+</LinearLayout>
